@@ -48,7 +48,7 @@
 $opus_structures = OpusPrimusStructures::create_instance();
 $opus_posts      = new OpusPrimusPosts();
 $opus_comments   = OpusPrimusComments::create_instance();
-$opus_images     = new OpusPrimusImages();
+$opus_images     = OpusPrimusImages::create_instance();
 $opus_navigation = new OpusPrimusNavigation(); ?>
 
 <div <?php post_class(); ?>>
