@@ -13,11 +13,12 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Change `OpusPrimusAuthors` to a singleton style class
 * Change `OpusPrimusGallery` to a singleton style class
 * Change `OpusPrimusHeader` to a singleton style class
-* Renamed file `class.OpusPrimusHeaders.php` to `class.OpusPrimusHeader.php` for consistency
+* Change `OpusPrimusArchives` to a singleton style class
 * Ensure `$pagination` has been initialized in `OpusPrimusNavigation::pagination` method
 * Moved the `support_comment` method back into the `OpusPrimusStructures` class
 * Moved the `before_comment_form` and `comments_form_closed` methods back into the `OpusPrimusComments` class
 * Removed `$screen` parameter as not necessary in Taglines Stanza
+* Renamed file `class.OpusPrimusHeaders.php` to `class.OpusPrimusHeader.php` for consistency
 
 = CSS =
 * Adjusted CSS to not reference `li` elements in default widget styles
